syntax = "proto3";

option go_package = "./rpc";

message GenesisSyncReq { }

message GenesisSyncRes {
  bytes Genesis = 1;
}

message BlockSyncReq {
  uint64 Number = 1;
}

message BlockSyncRes {
  bytes Block = 1;
}

message BlockReceiveReq {
  bytes Block = 1;
}

message BlockReceiveRes { }

message BlockSearchReq {
  uint64 Number = 1;
  string BlockHash = 2;
  string ParentHash = 3;
}

message BlockSearchRes {
  bytes Block = 1;
}

service Block {
  rpc GenesisSync(GenesisSyncReq) returns (GenesisSyncRes);
  rpc BlockSync(BlockSyncReq) returns (stream BlockSyncRes);
  rpc BlockReceive(stream BlockReceiveReq) returns (BlockReceiveRes);
  rpc BlockSearch(BlockSearchReq) returns (stream BlockSearchRes);
}
